--- a/boletines/index.html
+++ b/boletines/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="content">
+        <div class="content animate__animated animate__fadeInDown">
             <header>
                 <h1 class="title">Las mejores pizzas de mi ciudad.</h1>
             </header>
@@ -80,11 +80,13 @@
                             <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
                         </td>
-                        <td> <a href="./restaurantes/sensei.html">Más información</a>  </td>
+                        <td> <a href="./restaurantes/sensei.html">Más información</a> 
+                        </td>
                     </tr>
                 </tbody>
             </table> 
         </div>
-    </div> 
+    </div>
+    <script src="./javascript/main.js"></script>
 </body>
 </html>
