--- a/boletines/restaurantes/sensei.html
+++ b/boletines/restaurantes/sensei.html
@@ -39,6 +39,7 @@
                 </div>
             </section>
         </div>
-    </div> 
+    </div>
+    <script src="../javascript/main.js"></script> 
 </body>
 </html>
